<resources>
    <string name="app_name">Demo Grofers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_logout">Logout</string>


    <string name="tasks_list">Tasks List</string>
    <string name="rejected_state">Rejected</string>
    <string name="pending_state">Pending</string>
    <string name="development_state">Development</string>
    <string name="testing_state">Testing</string>
    <string name="production_state">Production</string>
    <string name="filter">Filter</string>
    <string name="title">Title</string>
    <string name="status">Status</string>
    <string name="description">Description</string>
    <string name="filter_underline">
        <u>Filter</u>
    </string>
    <string name="createTask">Create new Task</string>
    <string name="save">Save</string>
    <string name="searchTask">Search a task</string>

    <string-array name="states">
        <item>Select the status of task</item>
        <item>REJECTED</item>
        <item>PENDING</item>
        <item>DEVELOPMENT</item>
        <item>TESTING</item>
        <item>PRODUCTION</item>
    </string-array>


</resources>
