<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
                name="viewModel"
                type="com.example.demogrofers.viewmodel.FilterStatesViewModel" />

        <import type="android.view.View" />

    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

        <CheckBox
                android:id="@+id/chk_rejected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rejected_state"
                android:checked="true"
                android:layout_margin="10dp"
        />

        <CheckBox
                android:id="@+id/chk_pending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pending_state"
                android:checked="true"
                android:layout_margin="10dp"
        />

        <CheckBox
                android:id="@+id/chk_development"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/development_state"
                android:checked="true"
                android:layout_margin="10dp"
        />

        <CheckBox
                android:id="@+id/chk_testing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testing_state"
                android:checked="true"
                android:layout_margin="10dp"
        />

        <CheckBox
                android:id="@+id/chk_production"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/production_state"
                android:checked="true"
                android:layout_margin="10dp"
        />

        <Button
                android:id="@+id/btnDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
        />

    </LinearLayout>
</layout>