<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
                name="viewModel"
                type="com.example.demogrofers.viewmodel.CreateNewTaskViewModel" />
        <import type="android.view.View" />
    </data>

    <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

        <TextView
                android:id="@+id/headingNewTask_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin8"
                android:textSize="@dimen/textsize24"
                android:layout_centerHorizontal="true"
                android:text="@string/createTask"
                android:padding="@dimen/margin4"
        />
        <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin8"
                android:textSize="@dimen/textsize16"
                android:text="@string/title"
                android:padding="@dimen/margin4"
                android:layout_below="@id/headingNewTask_tv"
        />
        <TextView
                android:id="@+id/description_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin16"
                android:layout_marginBottom="@dimen/margin16"
                android:layout_marginRight="@dimen/margin8"
                android:layout_marginLeft="@dimen/margin8"
                android:textSize="@dimen/textsize16"
                android:text="@string/description"
                android:padding="@dimen/margin4"
                android:layout_below="@id/title_tv"
        />
        <TextView
                android:id="@+id/status_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin8"
                android:textSize="@dimen/textsize16"
                android:text="@string/status"
                android:padding="@dimen/margin4"
                android:layout_below="@id/description_tv"
        />
        <EditText
                android:id="@+id/title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin8"
                android:textSize="@dimen/textsize16"
                android:layout_below="@id/headingNewTask_tv"
                android:layout_toRightOf="@id/title_tv"
        />
        <EditText
                android:id="@+id/description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin16"
                android:layout_marginBottom="@dimen/margin16"
                android:layout_marginRight="@dimen/margin8"
                android:layout_marginLeft="@dimen/margin8"
                android:textSize="@dimen/textsize16"
                android:layout_below="@id/title_tv"
                android:layout_toRightOf="@id/description_tv"
        />
        <Spinner
                android:id="@+id/status_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/status_tv"
                android:layout_below="@id/description_tv"
                android:layout_margin="@dimen/margin8"
                android:textSize="@dimen/textsize16"
                android:entries="@array/states"
        />
        <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_below="@id/status_tv"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/margin16"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/textsize24"
                android:layout_alignParentBottom="true"
                android:text="@{viewModel.resultString}"
                android:visibility="@{viewModel.noResultState ? View.VISIBLE : View.GONE}" />

    </RelativeLayout>
</layout>
