<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/margin4"
            app:cardUseCompatPadding="true"
            android:layout_margin="@dimen/margin8">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:id="@+id/title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/margin8"
            />

            <TextView
                    android:id="@+id/description_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:layout_marginTop="@dimen/margin8"
                    android:layout_below="@id/title_tv"
            />

            <TextView
                    android:id="@+id/status_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:layout_marginTop="@dimen/margin4"
                    android:layout_below="@id/description_tv"
            />

            <ImageView
                    android:id="@+id/delete_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_delete_black_24dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="@dimen/delete_edit_margin"
            />

            <ImageView
                    android:id="@+id/edit_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_edit_black_24dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toLeftOf="@id/delete_iv"
                    android:layout_toStartOf="@id/delete_iv"
                    android:layout_margin="@dimen/delete_edit_margin"
                    android:paddingRight="@dimen/margin24"
            />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</layout>